metadata/sdx_pull_1595286862675/unpackaged/objects/MBExpense__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Claim_Type__c</fullName>
        <label>Expense Claim Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Business</fullName>
                </value>
                <value>
                    <fullName>Sales Conference</fullName>
                </value>
                <value>
                    <fullName>COVID-19 Home Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Date__c</fullName>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalExpenses__c</fullName>
        <label>Total Expense</label>
        <summarizedField>MBExpenseItem__c.Amount__c</summarizedField>
        <summaryForeignKey>MBExpenseItem__c.MBExpense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>MBExpense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MBEX-{0000}</displayFormat>
        <label>MBExpense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBExpenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>